--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container1">
         <div class="container">
              <nav class="navbar navbar-expand-lg navbar-light" id="header-menu">
         <div class="container-fluid">
@@ -119,7 +118,7 @@
           </div>
         </div>
       </nav>     
-        </div>
+      
 
 
       <div class="page-name">
@@ -128,8 +127,13 @@
       </div>
 
 
-      <div class="page-product">
-        
+      <div class="page-product d-flex justify-content-around">
+        <div class="product-image col-6">
+            <img src="https://htmldemo.net/jesco/jesco/assets/images/product-image/zoom-image/4.jpg" height="500" srcset="">
+        </div>
+        <div class="product-text col-6">
+            <h3>Ardene Microfibe</h3>
+        </div>
       </div>
     </div>
   </body>
