--- a/index.html
+++ b/index.html
@@ -7,132 +7,147 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
-        <div class="container">
-             <nav class="navbar navbar-expand-lg navbar-light" id="header-menu">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light" id="header-menu">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <a class="navbar-brand mt-2 mt-lg-0" href="#">
               <img
                 src="https://htmldemo.net/jesco/jesco/assets/images/logo/logo.png"
-                height="30"/>
+                height="30"
+              />
             </a>
-            <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex menu-items">
-              <li class="nav-item">
-                <a class="nav-link" href="#">HOME</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">SHOP</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">BLOGS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">CONTACT US</a>
-              </li>
-            </ul> -->
-<ul class="menu-item justify-content-center">
-    <li>HOME</li>
-    <li>SHOP</li>
-    <li>BLOGS</li>
-    <li>ABOUT US</li>
-    <li>CONTACT US</li>
-</ul>
+            <ul class="menu-item justify-content-center">
+              <li>HOME</li>
+              <li>SHOP</li>
+              <li>BLOGS</li>
+              <li>ABOUT US</li>
+              <li>CONTACT US</li>
+            </ul>
           </div>
 
           <div class="d-flex align-items-center">
-            <!-- Icon -->
-            <!-- <a class="text-reset me-3" href="#"> -->
-              <a href="">Sign In</a>
-            </a>
+            <a href="">Sign In</a>
 
-            <!-- Notifications -->
-            <!-- <div class="dropdown">
-              <a
-                class="text-reset me-3 dropdown-toggle hidden-arrow"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-mdb-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fas fa-bell"></i>
-                <span class="badge rounded-pill badge-notification bg-danger"
-                  >1</span
-                >
-              </a>
-              <ul
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a class="dropdown-item" href="#">Some news</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Another news</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </div> -->
-            <!-- Avatar -->
-            <!-- <div class="dropdown">
-              <a
-                class="dropdown-toggle d-flex align-items-center hidden-arrow"
-                href="#"
-                id="navbarDropdownMenuAvatar"
-                role="button"
-                data-mdb-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <img
-                  src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
-                  class="rounded-circle"
-                  height="25"
-                  alt="Black and White Portrait of a Man"
-                  loading="lazy"
-                />
-              </a>
-              <ul
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="navbarDropdownMenuAvatar"
-              >
-                <li>
-                  <a class="dropdown-item" href="#">My profile</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Settings</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Logout</a>
-                </li>
-              </ul>
-            </div> -->
+            <i class="fa-solid fa-magnifying-glass"></i>
           </div>
         </div>
-      </nav>     
-      
-
+      </nav>
 
       <div class="page-name">
-        <h2 style="font-family: Nunito;">Products</h2>
+        <h2 style="font-family: Nunito">Products</h2>
         <p><a href="">Home</a> // Products</p>
       </div>
 
+      <div class="page-product d-flex align-items-center row mt-6">
+        <div class="product-image d-flex align-items-start gap-3">
+          <div class="main-box">
+            <img src="1.webp" class="main-image" />
+          </div>
+          <div class="small-boxes">
+            <div class="small-box">
+              <img
+                src="2.webp"
+                class="small-image"
+                onclick="showImage('2.webp')"
+              />
+            </div>
+            <div class="small-box">
+              <img
+                src="3.webp"
+                class="small-image"
+                onclick="showImage('3.webp')"
+              />
+            </div>
+            <div class="small-box">
+              <img
+                src="4.webp"
+                class="small-image"
+                onclick="showImage('4.webp')"
+              />
+            </div>
+            <div class="small-box">
+              <img
+                src="4.webp"
+                class="small-image"
+                onclick="showImage('4.webp')"
+              />
+            </div>
+          </div>
 
-      <div class="page-product d-flex justify-content-around">
-        <div class="product-image col-6">
-            <img src="https://htmldemo.net/jesco/jesco/assets/images/product-image/zoom-image/4.jpg" height="500" srcset="">
-        </div>
-        <div class="product-text col-6">
-            <h3>Ardene Microfibe</h3>
+          <div class="product-texts ms-4">
+            <h3 style="font-family: Nunito, sans-serif">
+              Ardene Microfiber Tights
+            </h3>
+            <h5 style="font-family: Nunito, sans-serif; color: #fb5d5d">
+              $18.90
+            </h5>
+
+            <div class="product-rating">
+              <i class="fa-solid fa-star" style="color: #f5f820"></i>
+              <i class="fa-solid fa-star" style="color: #f5f820"></i>
+              <i class="fa-solid fa-star" style="color: #f5f820"></i>
+              <i class="fa-solid fa-star" style="color: #f5f820"></i>
+              <i class="fa-solid fa-star" style="color: #f5f820"></i>
+              <a href="">( 5 Customer Review )</a>
+            </div>
+
+            <div class="product-description mt-3">
+              <p>
+                Lorem ipsum dolor sit amet, consect adipisicing elit, sed do
+                eiusmod tempor incidi ut labore et dolore magna aliqua. Ut enim
+                ad minim veniam, quis nostrud exercita ullamco laboris nisi ut
+                aliquip ex ea commodo
+              </p>
+            </div>
+
+            <div class="product-buttons d-flex">
+              <input class="me-2" type="text" id="numupdown" value="1" />
+
+              <div class="product-button">
+                <input
+                  class="bCard"
+                  type="button"
+                  name=""
+                  value="ADD TO CARD"
+                />
+              </div>
+
+              <div class="product-heart ms-1">
+                <button class="bTwoButton">
+                  <i class="fa-regular fa-heart" style="color: #fff"></i>
+                </button>
+              </div>
+              <div class="product-heart ms-1">
+                <button class="bTwoButton">
+                  <i
+                    class="fa-solid fa-arrows-rotate"
+                    style="color: #fafafa"
+                  ></i>
+                </button>
+              </div>
+            </div>
+
+            <div class="product-details mt-3">
+              <p>SKU:<a href="">Ch-256xl</a></p>
+              <p>Categories:<a href="">Fashion</a><a href="">eCommerce</a></p>
+              <p>Share:
+                <a class="social" href=""><i class="fa-brands fa-facebook-f"></i></a>
+                <a class="social" href=""><i class="fa-brands fa-twitter"></i></a>
+                <a class="social" href=""><i class="fa-brands fa-google"></i></a>
+                <a class="social" href=""><i class="fa-brands fa-youtube"></i></a>
+                <a class="social" href=""><i class="fa-brands fa-instagram"></i></a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
